src/assets/variables.css
/* Ad Maiorem Dei Gloriam! */
@import url('https://fonts.googleapis.com/css2?family=Freckle+Face&family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');

:root {
    --bg-color: #0d090d;

    --window-bg-color: #23132f;
    --window-fg-color: #0a0011;

    --window-content-color: #ffffff;
    --window-title-color: #ffffff;

    --keyboard-key-bg-color: #360545;
    --keyboard-key-bg-color-hover: #270432;
    --keyboard-key-color: #ffffff;


    --geral-button-color: #ffffff;
    --geral-button-color-hover: #888888;

    --rom-card-width: 20rem;

    font-family: "Pixelify Sans", sans-serif;
}

